// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip timer should hide after set time 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      style="align-items: center; display: flex; height: 100vh; justify-content: center;"
    >
      <div
+       aria-describedby="floating-ui-2"
        class="inline-block"
        data-testid="tooltip-parent-element"
      >
        <button
          data-testid="button"
          type="button"
        >
          Hover over me
        </button>
+     </div>
+     <div
+       class="bg-blue-600 text-blue-50"
+       id="floating-ui-2"
+       role="tooltip"
+       style="left: 0px; position: absolute; top: 5.656854249492381px;"
+       tabindex="-1"
+     >
+       <div
+         class="px-1 text-sm font-display whitespace-nowrap border-t-2 border-blue-700"
+       >
+         <p>
+           Hello, world
+         </p>
+       </div>
+       <div
+         class="absolute w-2 h-2 rotate-45 -z-10 pointer-events-none bg-blue-700"
+         style="left: 0px; top: -4px;"
+       />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Tooltip timer should hide tooltip after 1000ms 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      style="align-items: center; display: flex; height: 100vh; justify-content: center;"
    >
      <div
+       aria-describedby="floating-ui-0"
        class="inline-block"
        data-testid="tooltip-parent-element"
      >
        <button
          data-testid="button"
          type="button"
        >
          Hover over me
        </button>
+     </div>
+     <div
+       class="bg-blue-600 text-blue-50"
+       id="floating-ui-0"
+       role="tooltip"
+       style="left: 0px; position: absolute; top: 5.656854249492381px;"
+       tabindex="-1"
+     >
+       <div
+         class="px-1 text-sm font-display whitespace-nowrap border-t-2 border-blue-700"
+       >
+         <p>
+           Hello, world
+         </p>
+       </div>
+       <div
+         class="absolute w-2 h-2 rotate-45 -z-10 pointer-events-none bg-blue-700"
+         style="left: 0px; top: -4px;"
+       />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Tooltip when placement is "bottom" should correctly render component when parent is hovered over 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      style="align-items: center; display: flex; height: 100vh; justify-content: center;"
    >
      <div
+       aria-describedby="floating-ui-10"
        class="inline-block"
        data-testid="tooltip-parent-element"
      >
        <button
          data-testid="button"
          type="button"
        >
          Hover over me
        </button>
+     </div>
+     <div
+       class="bg-blue-600 text-blue-50"
+       id="floating-ui-10"
+       role="tooltip"
+       style="left: 0px; position: absolute; top: 5.656854249492381px;"
+       tabindex="-1"
+     >
+       <div
+         class="px-1 text-sm font-display whitespace-nowrap border-t-2 border-blue-700"
+       >
+         <p>
+           Hello, world
+         </p>
+       </div>
+       <div
+         class="absolute w-2 h-2 rotate-45 -z-10 pointer-events-none bg-blue-700"
+         style="left: 0px; top: -4px;"
+       />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Tooltip when placement is "bottom" should correctly render component when parent is not hovered over 1`] = `
<DocumentFragment>
  <div
    style="align-items: center; display: flex; height: 100vh; justify-content: center;"
  >
    <div
      class="inline-block"
      data-testid="tooltip-parent-element"
    >
      <button
        data-testid="button"
        type="button"
      >
        Hover over me
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip when placement is "left" should correctly render component when parent is hovered over 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      style="align-items: center; display: flex; height: 100vh; justify-content: center;"
    >
      <div
+       aria-describedby="floating-ui-18"
        class="inline-block"
        data-testid="tooltip-parent-element"
      >
        <button
          data-testid="button"
          type="button"
        >
          Hover over me
        </button>
+     </div>
+     <div
+       class="bg-blue-600 text-blue-50"
+       id="floating-ui-18"
+       role="tooltip"
+       style="left: -5.656854249492381px; position: absolute; top: 0px;"
+       tabindex="-1"
+     >
+       <div
+         class="px-1 text-sm font-display whitespace-nowrap border-r-2 border-blue-700"
+       >
+         <p>
+           Hello, world
+         </p>
+       </div>
+       <div
+         class="absolute w-2 h-2 rotate-45 -z-10 pointer-events-none bg-blue-700"
+         style="right: -4px; top: 0px;"
+       />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Tooltip when placement is "left" should correctly render component when parent is not hovered over 1`] = `
<DocumentFragment>
  <div
    style="align-items: center; display: flex; height: 100vh; justify-content: center;"
  >
    <div
      class="inline-block"
      data-testid="tooltip-parent-element"
    >
      <button
        data-testid="button"
        type="button"
      >
        Hover over me
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip when placement is "right" should correctly render component when parent is hovered over 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      style="align-items: center; display: flex; height: 100vh; justify-content: center;"
    >
      <div
+       aria-describedby="floating-ui-14"
        class="inline-block"
        data-testid="tooltip-parent-element"
      >
        <button
          data-testid="button"
          type="button"
        >
          Hover over me
        </button>
+     </div>
+     <div
+       class="bg-blue-600 text-blue-50"
+       id="floating-ui-14"
+       role="tooltip"
+       style="left: 5.656854249492381px; position: absolute; top: 0px;"
+       tabindex="-1"
+     >
+       <div
+         class="px-1 text-sm font-display whitespace-nowrap border-l-2 border-blue-700"
+       >
+         <p>
+           Hello, world
+         </p>
+       </div>
+       <div
+         class="absolute w-2 h-2 rotate-45 -z-10 pointer-events-none bg-blue-700"
+         style="left: -4px; top: 0px;"
+       />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Tooltip when placement is "right" should correctly render component when parent is not hovered over 1`] = `
<DocumentFragment>
  <div
    style="align-items: center; display: flex; height: 100vh; justify-content: center;"
  >
    <div
      class="inline-block"
      data-testid="tooltip-parent-element"
    >
      <button
        data-testid="button"
        type="button"
      >
        Hover over me
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip when placement is "top" should correctly render component when parent is hovered over 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      style="align-items: center; display: flex; height: 100vh; justify-content: center;"
    >
      <div
+       aria-describedby="floating-ui-6"
        class="inline-block"
        data-testid="tooltip-parent-element"
      >
        <button
          data-testid="button"
          type="button"
        >
          Hover over me
        </button>
+     </div>
+     <div
+       class="bg-blue-600 text-blue-50"
+       id="floating-ui-6"
+       role="tooltip"
+       style="left: 0px; position: absolute; top: -5.656854249492381px;"
+       tabindex="-1"
+     >
+       <div
+         class="px-1 text-sm font-display whitespace-nowrap border-b-2 border-blue-700"
+       >
+         <p>
+           Hello, world
+         </p>
+       </div>
+       <div
+         class="absolute w-2 h-2 rotate-45 -z-10 pointer-events-none bg-blue-700"
+         style="bottom: -4px; left: 0px;"
+       />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Tooltip when placement is "top" should correctly render component when parent is not hovered over 1`] = `
<DocumentFragment>
  <div
    style="align-items: center; display: flex; height: 100vh; justify-content: center;"
  >
    <div
      class="inline-block"
      data-testid="tooltip-parent-element"
    >
      <button
        data-testid="button"
        type="button"
      >
        Hover over me
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip when theme is "danger" should correctly render component when parent is hovered over 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      style="align-items: center; display: flex; height: 100vh; justify-content: center;"
    >
      <div
+       aria-describedby="floating-ui-22"
        class="inline-block"
        data-testid="tooltip-parent-element"
      >
        <button
          data-testid="button"
          type="button"
        >
          Hover over me
        </button>
+     </div>
+     <div
+       class="bg-red-600 text-red-50"
+       id="floating-ui-22"
+       role="tooltip"
+       style="left: 0px; position: absolute; top: 5.656854249492381px;"
+       tabindex="-1"
+     >
+       <div
+         class="px-1 text-sm font-display whitespace-nowrap border-t-2 border-red-700"
+       >
+         <p>
+           Hello, world
+         </p>
+       </div>
+       <div
+         class="absolute w-2 h-2 rotate-45 -z-10 pointer-events-none bg-red-700"
+         style="left: 0px; top: -4px;"
+       />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Tooltip when theme is "danger" should correctly render component when parent is not hovered over 1`] = `
<DocumentFragment>
  <div
    style="align-items: center; display: flex; height: 100vh; justify-content: center;"
  >
    <div
      class="inline-block"
      data-testid="tooltip-parent-element"
    >
      <button
        data-testid="button"
        type="button"
      >
        Hover over me
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip when theme is "primary" should correctly render component when parent is hovered over 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      style="align-items: center; display: flex; height: 100vh; justify-content: center;"
    >
      <div
+       aria-describedby="floating-ui-26"
        class="inline-block"
        data-testid="tooltip-parent-element"
      >
        <button
          data-testid="button"
          type="button"
        >
          Hover over me
        </button>
+     </div>
+     <div
+       class="bg-blue-600 text-blue-50"
+       id="floating-ui-26"
+       role="tooltip"
+       style="left: 0px; position: absolute; top: 5.656854249492381px;"
+       tabindex="-1"
+     >
+       <div
+         class="px-1 text-sm font-display whitespace-nowrap border-t-2 border-blue-700"
+       >
+         <p>
+           Hello, world
+         </p>
+       </div>
+       <div
+         class="absolute w-2 h-2 rotate-45 -z-10 pointer-events-none bg-blue-700"
+         style="left: 0px; top: -4px;"
+       />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Tooltip when theme is "primary" should correctly render component when parent is not hovered over 1`] = `
<DocumentFragment>
  <div
    style="align-items: center; display: flex; height: 100vh; justify-content: center;"
  >
    <div
      class="inline-block"
      data-testid="tooltip-parent-element"
    >
      <button
        data-testid="button"
        type="button"
      >
        Hover over me
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip when theme is "secondary" should correctly render component when parent is hovered over 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      style="align-items: center; display: flex; height: 100vh; justify-content: center;"
    >
      <div
+       aria-describedby="floating-ui-30"
        class="inline-block"
        data-testid="tooltip-parent-element"
      >
        <button
          data-testid="button"
          type="button"
        >
          Hover over me
        </button>
+     </div>
+     <div
+       class="bg-gray-100 text-gray-600"
+       id="floating-ui-30"
+       role="tooltip"
+       style="left: 0px; position: absolute; top: 5.656854249492381px;"
+       tabindex="-1"
+     >
+       <div
+         class="px-1 text-sm font-display whitespace-nowrap border-t-2 border-gray-200"
+       >
+         <p>
+           Hello, world
+         </p>
+       </div>
+       <div
+         class="absolute w-2 h-2 rotate-45 -z-10 pointer-events-none bg-gray-200"
+         style="left: 0px; top: -4px;"
+       />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Tooltip when theme is "secondary" should correctly render component when parent is not hovered over 1`] = `
<DocumentFragment>
  <div
    style="align-items: center; display: flex; height: 100vh; justify-content: center;"
  >
    <div
      class="inline-block"
      data-testid="tooltip-parent-element"
    >
      <button
        data-testid="button"
        type="button"
      >
        Hover over me
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip when theme is "success" should correctly render component when parent is hovered over 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      style="align-items: center; display: flex; height: 100vh; justify-content: center;"
    >
      <div
+       aria-describedby="floating-ui-34"
        class="inline-block"
        data-testid="tooltip-parent-element"
      >
        <button
          data-testid="button"
          type="button"
        >
          Hover over me
        </button>
+     </div>
+     <div
+       class="bg-green-600 text-green-50"
+       id="floating-ui-34"
+       role="tooltip"
+       style="left: 0px; position: absolute; top: 5.656854249492381px;"
+       tabindex="-1"
+     >
+       <div
+         class="px-1 text-sm font-display whitespace-nowrap border-t-2 border-green-700"
+       >
+         <p>
+           Hello, world
+         </p>
+       </div>
+       <div
+         class="absolute w-2 h-2 rotate-45 -z-10 pointer-events-none bg-green-700"
+         style="left: 0px; top: -4px;"
+       />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Tooltip when theme is "success" should correctly render component when parent is not hovered over 1`] = `
<DocumentFragment>
  <div
    style="align-items: center; display: flex; height: 100vh; justify-content: center;"
  >
    <div
      class="inline-block"
      data-testid="tooltip-parent-element"
    >
      <button
        data-testid="button"
        type="button"
      >
        Hover over me
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip when theme is "warning" should correctly render component when parent is hovered over 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      style="align-items: center; display: flex; height: 100vh; justify-content: center;"
    >
      <div
+       aria-describedby="floating-ui-38"
        class="inline-block"
        data-testid="tooltip-parent-element"
      >
        <button
          data-testid="button"
          type="button"
        >
          Hover over me
        </button>
+     </div>
+     <div
+       class="bg-yellow-600 text-yellow-50"
+       id="floating-ui-38"
+       role="tooltip"
+       style="left: 0px; position: absolute; top: 5.656854249492381px;"
+       tabindex="-1"
+     >
+       <div
+         class="px-1 text-sm font-display whitespace-nowrap border-t-2 border-yellow-700"
+       >
+         <p>
+           Hello, world
+         </p>
+       </div>
+       <div
+         class="absolute w-2 h-2 rotate-45 -z-10 pointer-events-none bg-yellow-700"
+         style="left: 0px; top: -4px;"
+       />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Tooltip when theme is "warning" should correctly render component when parent is not hovered over 1`] = `
<DocumentFragment>
  <div
    style="align-items: center; display: flex; height: 100vh; justify-content: center;"
  >
    <div
      class="inline-block"
      data-testid="tooltip-parent-element"
    >
      <button
        data-testid="button"
        type="button"
      >
        Hover over me
      </button>
    </div>
  </div>
</DocumentFragment>
`;
